--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>关于 Rhine Lab</title>
+    <title>关于 518stringNav</title>
     <link rel="icon" href="../Logo.png" type="image/png">
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -18,7 +18,7 @@
             <li><button onclick="toggleColorMode()"><i class="fas fa-adjust"></i>切换主题</button></li>
         </ul>
         <div class="content">
-            <center><h1>关于 Rhine Laboratory</h1></center>
+            <center><h1>关于 518stringNav</h1></center>
             <p>施工中······</p>
         </div>
     </div>
