--- a/pages/rule.html
+++ b/pages/rule.html
@@ -19,7 +19,7 @@
         </ul>
         <div class="content">
             <center>
-                <h1>Rhine Assistant 用户守则</h1>
+                <h1>518stringNav 用户守则</h1>
             </center>
             <h4>1、本站旨在促进大模型应用，普及 AIGC，降低各位来访者的使用门槛，能让各位更方便享受到全方位的大模型体验；</h4>
             <h4>2、禁止使用本站免费额度进行包括但不限于文献翻译、模型训练、参加大型竞赛等会造成巨额 Token 消耗的行为；</h4>
